--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/routes/nueva-consulta/nueva-consulta.component.html
@@ -5,55 +5,57 @@
 		<h3 id="page_subtitle" [translate]="'ambulatoria.paciente.nueva-consulta.SUBTITLE'"></h3>
 	</section>
 
-	<section id="motivo">
-		<h2 class="mat-h2" [translate]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE'"></h2>
-		<mat-card>
-			<mat-card-content>
-				<app-concepts-search *ngIf="!motivoConsulta else mainMotivoConsulta"
-									 [label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
-									 (search)="openSearchDialog($event)">
-				</app-concepts-search>
-				<ng-template #mainMotivoConsulta>
-					<form [formGroup]="form">
-						<mat-form-field appearance="outline">
-							<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
-							</mat-label>
-							<input id="motivo" matInput type="text" formControlName="snomed" name="snomed" readonly
-								   matTooltip="{{ motivoConsulta.snomed.pt }}">
-							<button id="clear" mat-button matSuffix color="warn" mat-icon-button (click)="resetForm()">
-								<mat-icon>close</mat-icon>
-							</button>
-						</mat-form-field>
-					</form>
-				</ng-template>
-			</mat-card-content>
-		</mat-card>
+	<section id="motivo" class="doc-section">
+		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.motivo.TITLE'">
+				<ng-container concept-form>
+					<app-concepts-search *ngIf="!motivoNuevaConsultaService.getMotivoConsulta() else mainMotivoConsulta"
+										 [label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
+										 (search)="motivoNuevaConsultaService.openSearchDialog($event)">
+					</app-concepts-search>
+
+					<ng-template #mainMotivoConsulta>
+						<form [formGroup]="motivoNuevaConsultaService.getForm()">
+							<mat-form-field appearance="outline">
+								<mat-label [translate]="'internaciones.anamnesis.diagnosticos.DIAGNOSIS'">
+								</mat-label>
+								<input id="motivo-input" matInput type="text" formControlName="snomed" name="snomed"
+									   readonly
+									   matTooltip="{{motivoNuevaConsultaService.getMotivoConsulta().snomed.pt }}">
+								<button id="clear-motivo" mat-button matSuffix color="warn" mat-icon-button
+										(click)="motivoNuevaConsultaService.resetForm()">
+									<mat-icon>close</mat-icon>
+								</button>
+							</mat-form-field>
+						</form>
+					</ng-template>
+			</ng-container>
+		</app-document-section>
 	</section>
 
-	<section>
-		<app-document-section id="problemas"
-			[sectionTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE'"
-			[tableTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE'"
-		  	[columns]="this.problemasNuevaConsultaService.getColumns()"
-			[data]="this.problemasNuevaConsultaService.getData()">
+	<section id="problemas" class="doc-section">
+		<app-document-section [sectionTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TITLE'"
+							  [tableTitle]="'ambulatoria.paciente.nueva-consulta.problemas.TABLE_TITLE'"
+							  [columns]="problemasNuevaConsultaService.getColumns()"
+							  [data]="problemasNuevaConsultaService.getData()">
 			<div concept-form>
 				<app-concepts-search
-					*ngIf="!this.problemasNuevaConsultaService.getSnomedConcept() else problemaForm"
+					*ngIf="!problemasNuevaConsultaService.getSnomedConcept() else problemaForm"
 					[label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
-					(search)="this.problemasNuevaConsultaService.openSearchDialog($event)">
+					(search)="problemasNuevaConsultaService.openSearchDialog($event)">
 				</app-concepts-search>
 			</div>
 
 			<ng-template #problemaForm>
-				<form [formGroup]="this.problemasNuevaConsultaService.getForm()"
-					  (ngSubmit)="this.problemasNuevaConsultaService.addToList()">
+				<form [formGroup]="problemasNuevaConsultaService.getForm()"
+					  (ngSubmit)="problemasNuevaConsultaService.addToList()">
 
 					<mat-form-field appearance="outline">
-						<mat-label [translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"></mat-label>
+						<mat-label
+							[translate]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"></mat-label>
 						<input id="snomed-input" matInput type="text" formControlName="snomed" name="snomed" readonly
-							   matTooltip="{{ this.problemasNuevaConsultaService.getSnomedConcept().pt }}">
+							   matTooltip="{{ problemasNuevaConsultaService.getSnomedConcept().pt }}">
 						<button id="clear" mat-button matSuffix color="warn" mat-icon-button
-								(click)="this.problemasNuevaConsultaService.resetForm()">
+								(click)="problemasNuevaConsultaService.resetForm()">
 							<mat-icon>close</mat-icon>
 						</button>
 					</mat-form-field>
@@ -68,8 +70,9 @@
 						<mat-label
 							[translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_INICIO'">
 						</mat-label>
-						<input matInput id="fecha_inicio" [matDatepicker]="inicioDatePicker" formControlName="fechaInicio"
-							   [max]="this.problemasNuevaConsultaService.getFechaInicioMax()">
+						<input matInput id="fecha_inicio" [matDatepicker]="inicioDatePicker"
+							   formControlName="fechaInicio"
+							   [max]="problemasNuevaConsultaService.getFechaInicioMax()">
 						<mat-datepicker-toggle matSuffix [for]="inicioDatePicker"></mat-datepicker-toggle>
 						<mat-datepicker #inicioDatePicker></mat-datepicker>
 					</mat-form-field>
@@ -79,7 +82,7 @@
 							[translate]="'ambulatoria.paciente.nueva-consulta.problemas.FECHA_FIN'">
 						</mat-label>
 						<input matInput id="fecha_fin" [matDatepicker]="finDatePicker" formControlName="fechaFin"
-							   [min]="this.problemasNuevaConsultaService.getFechaFinMin()">
+							   [min]="problemasNuevaConsultaService.getFechaFinMin()">
 						<mat-datepicker-toggle matSuffix [for]="finDatePicker"></mat-datepicker-toggle>
 						<mat-datepicker #finDatePicker></mat-datepicker>
 					</mat-form-field>
