tg-1144. [BE] Cambiar inmunizations por immunizations

--- a/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis-minsal.html
@@ -14,7 +14,7 @@
 		<div th:replace="fragments/general.html :: personalHistory"></div>
 		<div th:replace="fragments/general.html :: familyHistory"></div>
 		<div th:replace="fragments/general.html :: allergies"></div>
-		<div th:replace="fragments/general.html :: inmunizations"></div>
+		<div th:replace="fragments/general.html :: immunizations"></div>
 		<div th:replace="fragments/general.html :: medications(title='Medicación habitual')"></div>
 		<div th:replace="fragments/general.html :: vitalSigns"></div>
 		<div th:replace="fragments/general.html :: notes-base"></div>
