--- a/back-end/hospital-api/src/main/resources/templates/anamnesis-tandil.html
+++ b/back-end/hospital-api/src/main/resources/templates/anamnesis-tandil.html
@@ -5,14 +5,14 @@
 	<th:block th:include="fragments/general.html :: headerfiles"></th:block>
 </head>
 <body>
-<div th:replace="fragments/general.html :: header(title='Evaluación de ingreso', subtitle=Internación)"></div>
+<div th:replace="fragments/general.html :: header(title='Evaluación de ingreso', subtitle='Internación')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
 	<div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.tandil)"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: personalHistory"></div>
 	<div th:replace="fragments/general.html :: familyHistory"></div>
 	<div th:replace="fragments/general.html :: allergies"></div>
-	<div th:replace="fragments/general.html :: inmunizations"></div>
+	<div th:replace="fragments/general.html :: immunizations"></div>
 	<div th:replace="fragments/general.html :: medications(title='Medicación habitual')"></div>
 	<div th:replace="fragments/general.html :: vitalSigns"></div>
 	<div th:replace="fragments/general.html :: notes-base"></div>
