--- a/back-end/hospital-api/src/main/resources/templates/evolutionnote-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/evolutionnote-chaco.html
@@ -5,12 +5,12 @@
 	<th:block th:include="fragments/general.html :: headerfiles"></th:block>
 </head>
 <body>
-	<div th:replace="fragments/general.html :: header(title='Nota de evolución', subtitle=Internación)"></div>
+	<div th:replace="fragments/general.html :: header(title='Nota de evolución', subtitle='Internación')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Adulto Mayor')"></div>
 	<div th:replace="fragments/general.html :: diagnosis(message=document.pdf.diagnosis.title.chaco)"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: allergies"></div>
-	<div th:replace="fragments/general.html :: inmunizations"></div>
+	<div th:replace="fragments/general.html :: immunizations"></div>
 	<div th:replace="fragments/general.html :: vitalSigns"></div>
 	<div th:replace="fragments/general.html :: notes-base"></div>
 </body>
