--- a/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
@@ -5,14 +5,14 @@
 	<th:block th:include="fragments/general.html :: headerfiles"></th:block>
 </head>
 <body>
-	<div th:replace="fragments/general.html :: header(title='Nueva consulta', subtitle=Ambulatoria)"></div>
+	<div th:replace="fragments/general.html :: header(title='Nueva consulta', subtitle='Ambulatoria')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
 	<div th:replace="fragments/general.html :: problems(message='Problemas/Antecedentes')"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: familyHistory"></div>
 	<div th:replace="fragments/general.html :: allergies"></div>
 	<div th:replace="fragments/general.html :: medications(title='Medicación habitual')"></div>
-	<div th:replace="fragments/general.html :: inmunizations"></div>
+	<div th:replace="fragments/general.html :: immunizations"></div>
 	<div th:replace="fragments/general.html :: vitalSigns"></div>
 	<div th:replace="fragments/general.html :: notes-outpatient"></div>
 </body>
