--- a/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
+++ b/back-end/hospital-api/src/main/resources/templates/outpatient-chaco.html
@@ -7,6 +7,8 @@
 <body>
 	<div th:replace="fragments/general.html :: header(title='Nueva consulta', subtitle='Ambulatoria')"></div>
 	<div th:replace="fragments/general.html :: personalData(patientType='Paciente')"></div>
+	<div th:replace="fragments/general.html :: reasons(message='Motivos')"></div>
+	<div th:replace="fragments/general.html :: procedures(message='Procedimientos')"></div>
 	<div th:replace="fragments/general.html :: problems(message='Problemas/Antecedentes')"></div>
 	<div th:replace="fragments/general.html :: antropometicData"></div>
 	<div th:replace="fragments/general.html :: familyHistory"></div>
