tg-1079 Formulario nueva agenda

--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -4,7 +4,7 @@
 		<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
 			<ng-container>
 				<button mat-flat-button color="primary" id="goToNewAgendaButton" (click)="goToNewAgenda()" fxFlexFill.xs>
-					<span class="uppercase" [translate]="'turnos.home.NEW-AGENDA'"></span>
+					<span class="uppercase" [translate]="'turnos.home.buttons.NEW_AGENDA'"></span>
 				</button>
 			</ng-container>
 		</div>
