tg-1149. [P1] Error 500 en ficha de internacion

--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/anamnesis-form/anamnesis-form.component.html
@@ -84,7 +84,7 @@
 			<app-alergias [(allergies)]="allergies"></app-alergias>
 		</section>
 		<section id="vacunas">
-			<app-vacunas [(inmunizations)]="inmunizations"></app-vacunas>
+			<app-vacunas [(immunizations)]="immunizations"></app-vacunas>
 		</section>
 		<section id="medicacion">
 			<app-medicacion [(medications)]="medications"></app-medicacion>
