--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/nota-evolucion-form/nota-evolucion-form.component.html
@@ -204,7 +204,7 @@
 			<app-alergias [(allergies)]="allergies"></app-alergias>
 		</section>
 		<section id="vacunas" *hasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO']">
-			<app-vacunas [(inmunizations)]="inmunizations"></app-vacunas>
+			<app-vacunas [(immunizations)]="immunizations"></app-vacunas>
 		</section>
 		<section id="buttons" class="form-buttons">
 			<button mat-stroked-button type="button" color="primary" (click)="back()">
