--- a/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/ambulatoria/components/vacunas/vacunas.component.html
@@ -12,7 +12,7 @@
 
 	<div fxLayout="row" fxLayoutGap="20px">
 		<div fxFlex="50">
-			<app-vacunas-summary [inmunizations]="inmunizations$ | async"
+			<app-vacunas-summary [immunizations]="immunizations$ | async"
 			                     [editable]="false">
 			</app-vacunas-summary>
 		</div>
