--- a/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/vacunas/vacunas.component.html
+++ b/front-end/webapp/src/app/modules/historia-clinica/modules/internacion/components/vacunas/vacunas.component.html
@@ -38,7 +38,7 @@
 
 <section>
 	<h3 class="mat-body-2" [translate]="'internaciones.anamnesis.vacunas.table.TITLE'"></h3>
-	<table mat-table [dataSource]="inmunizations" class="secondary">
+	<table mat-table [dataSource]="immunizations" class="secondary">
 
 		<ng-container *ngFor="let column of columns" [matColumnDef]="column.def">
 			<th *matHeaderCellDef>{{ column.header | translate }}</th>
@@ -57,5 +57,5 @@
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
-	<app-no-data class="secondary" *ngIf="inmunizations.length === 0"></app-no-data>
+	<app-no-data class="secondary" *ngIf="immunizations.length === 0"></app-no-data>
 </section>
