--- a/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
+++ b/front-end/webapp/src/app/modules/turnos/routes/home/home.component.html
@@ -2,7 +2,7 @@
 	<section>
 		<h2 class="page-title" [translate]="'turnos.home.TITLE'"></h2>
 		<div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
-			<ng-container>
+			<ng-container *hasRole="['ADMINISTRATIVO']">
 				<button mat-flat-button color="primary" id="goToNewAgendaButton" (click)="goToNewAgenda()" fxFlexFill.xs>
 					<span class="uppercase" [translate]="'turnos.home.buttons.NEW_AGENDA'"></span>
 				</button>
